# switchboard

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
bridges/protocol/: go.mod  protocol.go
bridges/telegram/: auth.go  chats.go  go.mod  main.go
bridges/whatsapp/: auth.go  chats.go  go.mod  go.sum  main.go
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  lib.rs  main.rs
src/components/: AuthTelegram.tsx  AuthWhatsApp.tsx  ChatList.tsx  MessageInput.tsx  MessageView.tsx  Sidebar.tsx
src/hooks/: useBridge.ts
src/stores/: appStore.ts
src/types/: protocol.ts
