[package]
name = "switchboard"
version = "0.1.0"
description = "Unified messenger — native protocol bridges for WhatsApp, Telegram, and more"
authors = ["Aigusta Labs"]
edition = "2021"

[lib]
name = "switchboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
